apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 0
  template:
    metadata:
      labels:
        app: radarr
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
              name: radarr
          volumeMounts:
            - name: movies
              mountPath: /movies
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /config
      volumes:
        - name: movies
          hostPath:
            path: /home/padawan/media/movies
            type: Directory
        - name: downloads
          hostPath:
            path: /media/downloads
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
